--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/PeterWang1/macdemo/issues"
   },
-  "homepage": "https://github.com/PeterWang1/macdemo#readme"
+  "homepage": "https://github.com/PeterWang1/macdemo#readme",
+  "dependencies": {
+    "vue": "^3.2.33"
+  }
 }
